# buttermilk

./: .aiexclude  .envrc  .gitignore  AUTOMATED-TESTING-GUIDE.md  CLAUDE.md  Dev guidelines.md  ISSUE_DATA_LOADER_COLUMN_MAPPING.md  Makefile  README.md  README_HYDRA_PATTERNS.md  configuration_integration.py  devfile.yaml  enhanced_record_design.py  flow.flex.yaml  implementation_blueprint.md  migration_strategy.py  osb_flow_proof.py  poetry.toml  pyproject.toml  request.json  setup.py  simple_sync_test.py  test_chromadb_sync_fix.py  test_enhanced_record.py  test_gcs_storage.py  test_long_wait.py  test_mcp_endpoints.py  test_mcp_server.py  test_minimal.py  test_minimal_flow.py  test_osb_flow.py  test_simple_flow.py  test_simple_websocket.py  test_simple_ws.py  test_vector_resume.py  test_websocket_debug.py  test_websocket_minimal.py  test_ws_debug.py  vector_processing_updates.py
.claude/: settings.local.json
.claude/commands/: README.md
.devcontainer/: build.sh  devcontainer.json  docker-compose.yml  post_create.sh  post_start.sh  setup_gpu.sh
.github/: config.yml  pull_request_template.md
buttermilk/: __init__.py  bm.py  buttermilk.py  chat.excalidraw  config.py  core_structure.md  defaults.py  exceptions.py  flow.flex.yaml  implementation_plan.md  imports_to_update.md  lc.py  llms.py  run.py  utils.py
buttermilk/_core/: __init__.py  agent.py  agent.py.backup  batch.py  bm_init.py  cloud.py  cloud_config.py  config.py  constants.py  context.py  contract.py  defaults.py  dmrc.py  evaluate.py  exceptions.py  flow.py  image.py  job.py  keys.py  llms.py  log.py  mcp_decorators.py  message_data.py  orchestrator.py  query.py  retry.py  runner_types.py  schema_validation.py  singleton.py  storage_config.py  tool_definition.py  types.py  ui.py  variants.py
buttermilk/agents/: README.md  __init__.py  assistant.py  describer.py  differences.py  example_tool_agent.py  fetch.py  imagegen.py  ingest.py  judge.py  judger.py  lc.py  llm.py  llmchat.py  reasoning.py  scraper.py  sheetexporter.py  spy.py  testagent.py
buttermilk/api/: batch.py  flow-gf.py  flow.py  job_queue.py  lazy_routes.py  mcp.py  mcp_agents.py  mcp_osb.py  monitoring.py  osb_message_enhancements.py  pubsub.py  pubsubdev.sh  routes.py  runs.py  stream.py
buttermilk/apis/: __init__.py  hf.py  replicate.py
buttermilk/automod/: mod.py  pfmod.py
buttermilk/churn/: __init__.py  pail.py  types.py
buttermilk/conf/: config.yaml  creek.yaml
buttermilk/data/: __init__.py  bias.py  bigquery_loader.py  loaders.py  pipe.py  recordmaker.py  toxic.py  vector.py  vector_resume.py
buttermilk/debug/: README.md  README_DEBUGAGENT.md  __init__.py  cli.py  cli.py.bak  config_validator.py  debug_agent.py  error_capture.py  gcp_logs.py  mcp_client.py  mcp_debug_flow.py  models.py  start_debug_mcp.py  ws_debug_cli.py
buttermilk/flows/: __init__.py  agent.py  deps.py  experiment_drag.yaml  experiment_vaw.yaml  helpers.py  judge.py  mod.py  mod_ots.py  mod_pipeline.py  results_bq.py  templating.py  test.ipynb
buttermilk/hydra_plugins/: buttermilk_search_path_plugin.py
buttermilk/libs/: __init__.py  ag.py  autogen.py  hf.py  replicate.py  slack.py  zotero.py
buttermilk/mcp/: __init__.py  autogen_adapter.py  server.py  tool_registry.py
buttermilk/monitoring/: __init__.py  health_monitor.py  observability.py  (+1 more)
conf/: README_FLOWS.md  config.yaml  config_new.yaml  local.yaml  osb_api_no_weave.yaml  test_api.yaml  testing.yaml  trans.yaml
docs/: AGENT_ANNOUNCEMENT_IMPLEMENTATION.md  AGENT_CONSOLIDATION_PLAN.md  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  DATA_LOADER_FIX_PLAN.md  DEBUGGING.md  DEVELOPMENT_STANDARDS.md  DOCUMENTATION_MAINTENANCE.md  ISSUE_63_COMPREHENSIVE_PLAN.md  MCP_TESTING.md  OSB_FLOW_ANALYSIS.md  QUICK_START.md  README.md  TESTING_GUIDE.md  TOOL_DEFINITIONS.md  agent_contract_changes.md  audit.md  audit_plan.md  batch_processing.md  cli_commands.md  concepts.md  external_configuration_guide.md  flow_architecture.md  flow_control_priority_fixes.md  getting_started_groupchat.md  job_queue.md  osb_vector_database_guide.md  vector_database_guide.md  weave-credentials.md
examples/: debug_test_example.py  example_custom_tool_schema.py  example_enhanced_tool_descriptions.py  example_multi_tool_agent.py  extract_ratio_osb.ipynb  frames_climate.ipynb  frames_video.ipynb  hate.ipynb  json_to_vector_tutorial.ipynb  load_data_bq.ipynb  mcp_dual_mode_example.py  mcp_groupchat_integration.py  modsynth.ipynb  multimodal.ipynb  osb_vector_database_example.ipynb  osb_vector_example.ipynb  osbsum.sh  tja_scores.ipynb  weave_tracing.ipynb  zot.ipynb  zotero.ipynb
schemas/: record.schema.json
scripts/: automated-flow-test.sh  benchmark_startup.py  debug-api.sh  debug-flow.sh  debug_mcp_stdio.py  manual_chromadb_sync.py  monitor-server.sh  run_debug_mcp_server.py  test-manager-response.js  test_debug_mcp.py  test_mcp.py  test_ws_debug_cli.py  view-logs.sh
templates/: agent_tool_description.jinja2  host_structured_tools.jinja2
tests/: conftest.py  test_agent_announcement_behavior.py  test_agent_centric_tools.py  test_agent_tool_announcement_fix.py  test_autogen_integration.py  test_bm_async_init.py  test_bm_singleton.py  test_bq.py  test_churn.py  test_cli.py  test_configuration_unit.py  test_contract_agent_announcement.py  test_core_types_unit.py  test_datapipes.py  test_debug_agent.py  test_enhanced_rag_query_fix.py  test_enhanced_rag_tool_based.py  test_flow_integration_with_tools.py  test_groupchat_announcement_integration.py  test_host_agent_registry.py  test_improved_tool_routing_messages.py  test_issue_79_unit_tests.py  test_lazy_loading_unit.py  test_llm.py  test_llms.py  test_llms_multimodal.py  test_load_data_regression.py  test_logger_config_validation.py  test_mcp_autogen_adapter.py  test_mcp_server_unit.py  test_orchestrator_storage_validation.py  test_osb_flow_integration.py  test_parameter_merging.py  test_participants_fix.py  test_participants_fix_final.py  test_participants_fix_integration.py  test_record_content_validation.py  test_records.py  test_records_openaimessages.py  test_runner_types.py  (+23 more)
(+949 files in other folders)
