[tool.poetry]
name = "buttermilk"
version = "0.2.1"
description = ""
authors = ["Nicolas Suzor <nic@suzor.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
shortuuid = "^1.0.13"
psutil = "~5.9.5"
cloudpathlib = "~0.20.0"
requests = "^2.32.3"
pathlib = "^1.0.1"
pillow = "~11.0.0"
pyyaml = "^6.0.2"
urllib3 = "^2.2.2"
azureml-core = "^1.57.0"
azure-identity = "^1.17.1"
promptflow = {extras = ["core", "devkit", "azure"], version = "^1.15.0"}
hydra-core = "^1.3.2"
azure-keyvault = "^4.2.0"
pydantic = "^2.8.2"
coloredlogs = "^15.0.1"
google-cloud-logging = "~3.11.2"
json-repair = "^0.28.3"
boto3 = "^1.35.7"
azure-ai-contentsafety = "^1.0.0"
azure-cognitiveservices-vision-contentmoderator = "^1.0.0"
unidecode = "^1.3.8"
huggingface-hub = "^0.26.1"
sentencepiece = "^0.2.0"
validators = "^0.33.0"
replicate = "^0.32.1"
keyring = ">23.4.0"
google-crc32c = "^1.6.0"
regex = "^2024.9.11"
proto-plus = "^1.25.0"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
rich = "^13.9.4"
promptflow-tools = "^1.4.0"
google-cloud-secret-manager = "~2.21.1"
anthropic = {extras = ["vertex"], version = "^0.39.0"}

[tool.poetry.group.ml.dependencies]
torch = "^2.5.1"
accelerate = "^0.33.0"
evaluate = "^0.4.2"
einops = "^0.8.0"
hf-transfer = "^0.1.8"
loky = "^3.4.1"
transformers = "^4.44.2"
peft = "^0.12.0"
azure-ai-ml = "1.18.0"
google-generativeai = "^0.7.2"

[tool.poetry.group.dev.dependencies]
hydra-zen = "^0.13.0"
hydra-joblib-launcher = "^1.2.0"
fsspec = "^2024.6.1"
gcsfs = "^2024.6.1"
pytest = "^8.3.2"
cmap = "^0.3.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.3.1"
pytest-cov = "^5.0.0"
slack-bolt = "^1.21.2"
matplotlib = "^3.9.2"
alt-pytest-asyncio = {version = "^0.9.1", markers = "python_version >= '3.11'"}
tqdm = "^4.66.5"
hydra-colorlog = "^1.2.0"
plotly = "^5.24.1"
gradio = "^5.4.0"
gspread = "^6.1.2"
openpyxl = "^3.1.5"


[tool.poetry.group.video.dependencies]
opencv-python = "^4.10.0.84"
moviepy = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = [
    "RET504",  # Unnecessary variable assignment before return
    "RET503",  # Multiple returns 
    "E501",    # Line too long 
    "TRY003", "EM101",   # No f-strings or string literals in exceptions
    "RET505",  # Unnecessary else after return
] 
lint.isort.combine-as-imports = true
lint.isort.known-first-party = ["buttermilk"]
# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"

[tool.ruff.format]
# Enable formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
  "integration: integration tests, don't run by default",
  "scheduled: mark tests to run in scheduled testing",
]
norecursedirs = ["docs", "*.egg-info", "*.egg", "bin", "demo", ".git", "appdir", ".tox", "mediamarkets", "scrapers"]
timeout = 600
default_async_timeout = 300
addopts = [ "-rxX",
    "--capture=fd", "--tb=short",
    "--continue-on-collection-errors","--durations=10", 
    "-n 16"
    ]
#   " "-rA", "--timeout_method=thread", "--with-integration"
# xfail_strict = true
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
    "ignore:Passing field metadata as keyword arguments is deprecated"
    ]

[tool.deps.disabled]

google-cloud-aiplatform = {extras = ["evaluation"], version = "~1.70.0"}
google-cloud-bigquery-storage = "<3.0.0"
google-cloud-storage = "<3.0.0"
db-dtypes = "^1.3.0"
google-cloud-pubsub = "~2.26.1"
scikit-learn = "^1.5.2"
google-cloud-bigquery = "~3.26.0"
langchain-openai = ">=0.2.8"
langchain-anthropic = ">=0.3.0"
#google-cloud-aiplatform = {extras = ["langchain", "reasoningengine"], version = ">=1.70.0"}
openinference-instrumentation-langchain = ">=0.1.25"
anyio = "~3.7.1"
google-cloud-language = "~2.14.0"
langchain = ">0.3"
langchain-google-vertexai = ">2.0.0"